--- a/cloud_no7_success.html
+++ b/cloud_no7_success.html
@@ -67,6 +67,7 @@
     <div class="card" role="region" aria-label="등록 완료 카드">
       <div class="h2">구매가 완료되었습니다.</div>
       <p class="muted">일곱 번째 구름을 엄선하여 전해드리겠습니다.<br>하늘을 올려다보며 잠시 기다려주세요.</p>
+      <p class="muted">작성하신 메일로 구매완료 알람이 발송되었으니 확인해주세요.</p>
       <a href="cloud_no7_index.html" class="cta">홈으로 돌아가기</a>
     </div>
   </main>
