--- a/cloud_no7_buy.html
+++ b/cloud_no7_buy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cloud No.7 — 구매하기</title>
+  <title>Cloud No.7 — 구름 받기</title>
   <meta name="description" content="Cloud No.7 구매 알림 등록 — 이메일을 남기면 한정 넘버링 Founders Batch 소식을 가장 먼저 전해드립니다.">
   <meta name="theme-color" content="#F5F2EE">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -50,7 +50,7 @@
       backdrop-filter: blur(6px);
       text-align:left;
     }
-    .h2{font:600 clamp(28px,4.6vw,44px)/1.15 'Playfair Display',serif; margin:0 0 10px}
+    .h2{font:600 clamp(28px,4.6vw,44px)/1.15 'Pretendard',system-ui,-apple-system,'Segoe UI',Roboto,'Helvetica Neue',Arial,'Noto Sans KR',sans-serif; margin:0 0 10px}
     .muted{color:var(--muted)}
     form{display:grid; gap:16px; margin-top:12px}
     .field{display:grid; gap:8px}
@@ -77,7 +77,7 @@
 <div class="wrap">
   <header class="nav" role="navigation" aria-label="주요 메뉴">
     <div class="brand">
-      <img src="logo_b.png" alt="Cloud No.7 Logo" class="logo">
+      <a href="/"><img src="logo_b.png" alt="Cloud No.7 Logo" class="logo"></a>
     </div>
     <nav><a class="btn" href="cloud_no7_index.html">홈으로</a></nav>
   </header>
@@ -85,7 +85,7 @@
   <main class="hero">
     <div class="sky" aria-hidden="true"></div>
     <div class="card" role="region" aria-label="구매 알림 등록 카드">
-      <div class="h2">구매하기</div>
+      <div class="h2">구름 받기</div>
       <p class="muted">이메일을 남겨주시면 일곱번째 한정 넘버링 구름을 보내드립니다.<br>구매 후 2~3일의 배송 기간이 소요됩니다.</p>
 
       <div id="msg-success" class="success" role="status">등록되었습니다. 곧 하늘에서 소식을 전할게요 ☁︎</div>
@@ -120,7 +120,7 @@
           <span>이메일 수신에 동의합니다.</span>
         </label>
 
-        <button class="cta" type="submit" aria-label="이메일 등록">일곱번째 구름 구매하기</button>
+        <button class="cta" type="submit" aria-label="이메일 등록">일곱번째 구름 받아보기</button>
         <div class="note">제출 시 <strong>개인정보 처리방침</strong>에 동의한 것으로 간주됩니다. 실제 결제는 추후 안내됩니다.</div>
       </form>
     </div>
