--- a/cloud_no7_index.html
+++ b/cloud_no7_index.html
@@ -154,10 +154,10 @@
 <body>
   <header class="nav" role="navigation" aria-label="주요 메뉴">
     <div class="brand">
-      <img src="logo.png" alt="Cloud No.7 Logo" class="logo">
+      <a href="/"><img src="logo.png" alt="Cloud No.7 Logo" class="logo"></a>
     </div>
     <nav aria-label="보조 메뉴" class="menu">
-      <a class="btn" href="cloud_no7_buy.html">구매하기</a>
+      <a class="btn" href="/buy">지금 구름 받기</a>
     </nav>
   </header>
 
@@ -172,10 +172,10 @@
         <h2 aria-label="일곱 번째 구름을 수집하다">Collect the <em style="font-style:normal;border-bottom:2px solid rgba(30,36,48,.15)">Seventh</em> Cloud</h2>
         <p>하늘에서 일곱 번째로 태어난 구름. 가장 가볍고, 가장 오래 남는 기억. <br/>
            Cloud No.7은 엄선된 구름만 선별하여 여러분께 전합니다.</p>
+        <p>지금, 나만의 구름을 무료로 받아보세요</p>
         <p>
-          <a class="cta" href="cloud_no7_buy.html" aria-label="구매하기로 이동">구매하기 ☁︎</a>
-        </p>
-      </div>
+              <a class="cta" href="/buy" aria-label="구매하기로 이동">지금 구름 받기 ☁︎</a>
+            </p>      </div>
       <div class="meta">이미지는 참고용이며, 모든 크리에이티브는 AI로 생성됩니다.</div>
     </section>
 
@@ -233,8 +233,8 @@
         <div class="card">
           <div class="eyebrow">Next Step</div>
           <div class="h3">지금 예약하세요</div>
-          <p class="muted">구매하기 버튼을 눌러 이메일을 남기면, 제한된 수량의 구름을 구매할 수 있습니다.</p>
-          <p><a class="cta" href="cloud_no7_buy.html" aria-label="구매하기 페이지로 이동">구매하기</a></p>
+          <p class="muted">'지금 구름 받기' 버튼을 눌러 이메일을 남기면, 제한된 수량의 구름을 받을 수 있습니다.</p>
+          <p><a class="cta" href="/buy" aria-label="구매하기 페이지로 이동">지금 구름 받기</a></p>
           <small class="muted"></small>
         </div>
       </div>
