--- a/cloud_no7_success.html
+++ b/cloud_no7_success.html
@@ -35,8 +35,9 @@
       overflow: hidden;
     }
     .sky{
-      position:absolute; inset:-2rem -2rem 0 -2rem; z-index:-2;
-      background: url('success_sky.png') center/cover;
+      position:absolute; inset:-2rem -2rem 0 -2rem; z-index:0;
+      background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('success_picture.png') center/cover;
+      background-size: cover;
     }
     .card{
       max-width:560px; width:100%;
@@ -58,16 +59,16 @@
 <div class="wrap">
   <header class="nav" role="navigation" aria-label="주요 메뉴">
     <div class="brand">
-      <img src="logo_b.png" alt="Cloud No.7 Logo" class="logo">
+      <a href="/"><img src="logo_b.png" alt="Cloud No.7 Logo" class="logo"></a>
     </div>
   </header>
 
   <main class="hero">
     <div class="sky" aria-hidden="true"></div>
     <div class="card" role="region" aria-label="등록 완료 카드">
-      <div class="h2">구매가 완료되었습니다.</div>
-      <p class="muted">일곱 번째 구름을 엄선하여 전해드리겠습니다.<br>하늘을 올려다보며 잠시 기다려주세요.</p>
-      <p class="muted">작성하신 메일로 구매완료 알람이 발송되었으니 확인해주세요.</p>
+      <div class="h2">수집이 완료되었습니다.</div>
+      <p class="muted">당신의 일곱 번째 구름을 준비하고 있습니다.<br>하늘을 올려다보며, 곧 도착할 구름을 기다려주세요.</p>
+      <p class="muted">작성하신 메일로 알람이 발송되었으니 확인해주세요.☁︎</p>
       <a href="cloud_no7_index.html" class="cta">홈으로 돌아가기</a>
     </div>
   </main>
