--- a/cloud_no7_success.html
+++ b/cloud_no7_success.html
@@ -69,7 +69,7 @@
       <div class="h2">수집이 완료되었습니다.</div>
       <p class="muted">당신의 일곱 번째 구름을 준비하고 있습니다.<br>하늘을 올려다보며, 곧 도착할 구름을 기다려주세요.</p>
       <p class="muted">작성하신 메일로 알람이 발송되었으니 확인해주세요.☁︎</p>
-      <a href="cloud_no7_index.html" class="cta">홈으로 돌아가기</a>
+      <a href="/" class="cta">홈으로 돌아가기</a>
     </div>
   </main>
 
