게임2개 연결과 static폴더 사용

--- a/cloud_no7_buy.html
+++ b/cloud_no7_buy.html
@@ -77,7 +77,7 @@
 <div class="wrap">
   <header class="nav" role="navigation" aria-label="주요 메뉴">
     <div class="brand">
-      <a href="/"><img src="logo_b.png" alt="Cloud No.7 Logo" class="logo"></a>
+      <a href="/"><img src="/static/logo_b.png" alt="Cloud No.7 Logo" class="logo"></a>
     </div>
     <nav><a class="btn" href="cloud_no7_index.html">홈으로</a></nav>
   </header>
