--- a/cloud_no7_index.html
+++ b/cloud_no7_index.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="Cloud No.7 — 일곱 번째 구름을 수집하다" />
   <meta property="og:description" content="하늘에서 일곱 번째로 태어난 구름을 병에 담아 전하는 감성 디지털 굿즈 브랜드" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="kakao.png" />
+  <meta property="og:image" content="/static/kakao.png" />
   <meta name="theme-color" content="#e8ecef" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -158,7 +158,7 @@
 <body>
   <header class="nav" role="navigation" aria-label="주요 메뉴">
     <div class="brand">
-      <a href="/"><img src="logo.png" alt="Cloud No.7 Logo" class="logo"></a>
+      <a href="/"><img src="/static/logo.png" alt="Cloud No.7 Logo" class="logo"></a>
     </div>
     <nav aria-label="보조 메뉴" class="menu">
       <a class="btn" href="/buy">지금 구름 받기</a>
@@ -169,7 +169,7 @@
     <!-- HERO -->
     <section class="hero" aria-label="히어로 배너">
       <video autoplay loop muted playsinline class="hero-video">
-        <source src="video.mp4" type="video/mp4">
+        <source src="/static/video.mp4" type="video/mp4">
       </video>
       <div class="cloud-overlay" aria-hidden="true"></div>
       <div class="hero-content">
@@ -199,7 +199,7 @@
         </div>
         <div>
           <div class="tile" style="aspect-ratio:16/10; grid-column: span 12;">
-            <img src="카메라.png" alt="카메라 이미지">
+            <img src="/static/카메라.png" alt="카메라 이미지">
           </div>
         </div>
       </div>
@@ -211,10 +211,10 @@
         <div class="eyebrow">Collection</div>
         <div class="h3">No.7 시그니처 장면들</div>
         <div class="gallery" aria-label="콜렉션 갤러리">
-          <figure class="tile"><img src="1.png" alt="시그니처 장면 1"/></figure>
-          <figure class="tile"><img src="2.png" alt="시그니처 장면 2"/></figure>
-          <figure class="tile"><img src="3.png" alt="시그니처 장면 3"/></figure>
-          <figure class="tile"><img src="4.png" alt="시그니처 장면 4"/></figure>
+          <figure class="tile"><img src="/static/1.png" alt="시그니처 장면 1"/></figure>
+          <figure class="tile"><img src="/static/2.png" alt="시그ni처 장면 2"/></figure>
+          <figure class="tile"><img src="/static/3.png" alt="시그니처 장면 3"/></figure>
+          <figure class="tile"><img src="/static/4.png" alt="시그니처 장면 4"/></figure>
         </div>
       </div>
     </section>
