--- a/cloud_no7_success.html
+++ b/cloud_no7_success.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -36,7 +35,7 @@
     }
     .sky{
       position:absolute; inset:-2rem -2rem 0 -2rem; z-index:0;
-      background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('success_picture.png') center/cover;
+      background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('/static/success_picture.png') center/cover;
       background-size: cover;
     }
     .card{
@@ -59,7 +58,7 @@
 <div class="wrap">
   <header class="nav" role="navigation" aria-label="주요 메뉴">
     <div class="brand">
-      <a href="/"><img src="logo_b.png" alt="Cloud No.7 Logo" class="logo"></a>
+      <a href="/"><img src="/static/logo_b.png" alt="Cloud No.7 Logo" class="logo"></a>
     </div>
   </header>
 
