구글 전환 관련 추가

--- a/cloud_no7_buy.html
+++ b/cloud_no7_buy.html
@@ -72,6 +72,7 @@
     .error{display:none; background:#fff2f2; border:1px solid #fecaca; color:#7f1d1d; padding:12px 14px; border-radius:12px; font-size:14px}
     footer{padding:40px 20px 60px; text-align:center; color:#64748b}
   </style>
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-812219368"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-812219368'); </script>
 </head>
 <body>
 <div class="wrap">
