--- a/cloud_no7_index.html
+++ b/cloud_no7_index.html
@@ -154,6 +154,7 @@
       .parallax{ transform:none !important}
     }
   </style>
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-812219368"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-812219368'); </script>
 </head>
 <body>
   <header class="nav" role="navigation" aria-label="주요 메뉴">
