--- a/cloud_no7_success.html
+++ b/cloud_no7_success.html
@@ -53,6 +53,8 @@
     .cta:hover{transform:translateY(-1px)}
     footer{padding:40px 20px 60px; text-align:center; color:#64748b}
   </style>
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-812219368"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-812219368'); </script>
+<!-- Event snippet for 페이지 조회 conversion page --> <script> gtag('event', 'conversion', { 'send_to': 'AW-812219368/qUmVCM2cgq4bEOj3pYMD', 'value': 0.0, 'currency': 'KRW' }); </script>
 </head>
 <body>
 <div class="wrap">
