--- a/404.html
+++ b/404.html
@@ -44,6 +44,7 @@
             text-decoration: underline;
         }
     </style>
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-812219368"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-812219368'); </script>
 </head>
 <body>
     <div class="container">
