--- a/email_template.html
+++ b/email_template.html
@@ -6,6 +6,7 @@
   .container { max-width: 600px; margin: 20px auto; padding: 20px; border: 1px solid #eee; border-radius: 8px; }
   h3 { color: #111; }
 </style>
+<!-- Google tag (gtag.js) --> <script async src="https://www.googletagmanager.com/gtag/js?id=AW-812219368"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-812219368'); </script>
 </head>
 <body>
   <div class="container">
