메인 텍스트 줄바꿈

--- a/cloud_no7_index.html
+++ b/cloud_no7_index.html
@@ -175,8 +175,8 @@
       <div class="cloud-overlay" aria-hidden="true"></div>
       <div class="hero-content">
         <h2 aria-label="일곱 번째 구름을 수집하다">Collect the <em style="font-style:normal;border-bottom:2px solid rgba(30,36,48,.15)">Seventh</em> Cloud</h2>
-        <p>하늘에서 일곱 번째로 태어난 구름. 가장 가볍고, 가장 오래 남는 기억. <br/>
-           Cloud No.7은 엄선된 구름만 선별하여 여러분께 전합니다.</p>
+        <p>하늘에서 일곱 번째로 태어난 구름. <br> 가장 가볍고, 가장 오래 남는 기억. <br/>
+           Cloud No.7은 엄선된 구름만 선별하여 <br> 여러분께 전합니다.</p>
         <p>지금, 나만의 구름을 무료로 받아보세요</p>
         <p>
               <a class="cta" href="/buy" aria-label="구매하기로 이동">지금 구름 받기 ☁︎</a>
